Rename to LTeX+

--- a/_includes/stats/summary.html
+++ b/_includes/stats/summary.html
@@ -20,10 +20,10 @@
 
 <p class="world-map-sources">
   Sources:
-  <a href="https://marketplace.visualstudio.com/items?itemName=valentjn.vscode-ltex">
+  <a href="https://marketplace.visualstudio.com/items?itemName=ltex-plus.vscode-ltex-plus">
     Number of active users estimated from update counts from Marketplace data
   </a>,
-  <a href="https://github.com/valentjn/vscode-ltex-plus/stargazers">
+  <a href="https://github.com/ltex-plus/vscode-ltex-plus/stargazers">
     map shows public locations of GitHub stargazers
   </a>,
   <a href="https://osm.org/copyright">
@@ -33,6 +33,6 @@
     world map made with Natural Earth (public domain)
   </a>.
   All data shown are solely based on publicly available sources.
-  LTeX does neither collect nor send any usage data to the internet.
+  LTeX+ does neither collect nor send any usage data to the internet.
   Last update: {{site.time | date: "%B %-d, %Y"}}.
 </p>
