--- a/css/vscode-customizations.css
+++ b/css/vscode-customizations.css
@@ -1,4 +1,4 @@
-/* Copyright (C) 2019-2021 Julian Valentin, LTeX Development Community
+/* Copyright (C) 2019-2021 Julian Valentin, LTeX+ Development Community
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -52,7 +52,7 @@ code + a > code { margin-left:0; }
 
 /* links */
 a.no-external::after,
-a[href^="https://ltex-plus.github.io/ltex"]::after {
+a[href^="https://ltex-plus.github.io/ltex-plus"]::after {
   content:none;
 }
 a[href^="http://"]:not(.btn, .no-external)::after,
