New logo and branding

--- a/css/vscode-customizations.css
+++ b/css/vscode-customizations.css
@@ -154,14 +154,14 @@ footer .githubEditButton {
 
 /* colors */
 .navbar-inverse {
-  background-color:#6666cc;  /* blue: 347dbe */
-  border-color:#4545c4;      /* blue: 015cae */
+  background-color:#00a0dc;  /* blue: 347dbe */
+  border: color #006080;;      /* blue: 015cae */
 }
-.nav > li.active > a { background-color:#6666cc; }  /* blue: 347dbe */
-.nav > li > a:hover { background-color:#5b5bfc; }   /* blue: 248ec2 */
-li.sidebarTitle { color:#5555ff !important; }
+.nav > li.active > a { background-color:#00a0dc; }  /* blue: 347dbe */
+.nav > li > a:hover { background-color:#006080; }   /* blue: 248ec2 */
+li.sidebarTitle { color:#00a0dc !important; }
 code {
-  color:#5555ff;
-  background-color:#f2f2f9;
+  color:#006080;
+  background-color:#99ccdd;
 }
 h3 { color:inherit; }
