Change code background-color

--- a/css/vscode-customizations.css
+++ b/css/vscode-customizations.css
@@ -162,6 +162,6 @@ footer .githubEditButton {
 li.sidebarTitle { color:#00a0dc !important; }
 code {
   color:#006080;
-  background-color:#99ccdd;
+  background-color:#f1fcff;
 }
 h3 { color:inherit; }
