--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -43,13 +43,13 @@ layout: default
         content
         | replace: "LaTeX", "L<sup>A</sup>T<sub>E</sub>X"
         | replace: "TeX", "T<sub>E</sub>X"
-        | replace: "LT<sub>E</sub>X:", "LTeX+:"
+        | replace: "LT<sub>E</sub>X:", "LTeX:"
         | replace: "L<sup>A</sup>T<sub>E</sub>X Workshop", "LaTeX Workshop"
         | replace: '<code class="language-plaintext highlighter-rouge">LT<sub>E</sub>X',
                    '<code class="language-plaintext highlighter-rouge">LTeX+'
         | replace: "LT<sub>E</sub>X</code>", "LTeX+</code>"
         | replace: "<!-- ltex-client-specific-begin -->",
-                   '<div class="client-specific"><div class="client-specific-border" title="This feature is client-specific and may not be available in clients other than vscode-ltex."></div><div class="client-specific-contents">'
+                   '<div class="client-specific"><div class="client-specific-border" title="This feature is client-specific and may not be available in clients other than vscode-ltex-plus."></div><div class="client-specific-contents">'
         | replace: "<!-- ltex-client-specific-de-begin -->",
                    '<div class="client-specific"><div class="client-specific-border" title="Diese Funktion ist clientspezifisch und daher in anderen Clients als vscode-ltex-plus  eventuell nicht verfügbar."></div><div class="client-specific-contents">'
         | replace: "<!-- ltex-client-specific-end -->",
